--- a/.env_example
+++ b/.env_example
@@ -1,15 +1,17 @@
-# Discord Bot Token i konfiguracja
+# Discord Bot Token and configuration
 DISCORD_TOKEN=your_bot_discord_token
 CLIENT_ID=your_bot_discord_client_id
 CLIENT_SECRET=your_bot_discord_client_secret
 
 # MongoDB
-MONGODB_URI=mongo_db_uri
+MONGODB_URI=mongodb://admin:password@mongodb:27017/discordbot?authSource=admin
+MONGO_INITDB_ROOT_USERNAME=admin
+MONGO_INITDB_ROOT_PASSWORD=password
 
-# Serwer web
+# Web server
 WEB_PORT=3000
 SESSION_SECRET=your_random_session_secret
-DASHBOARD_URL=http://localhost:3000
+DASHBOARD_URL=http://localhost
 
-# Callback do logowania OAuth2
-CALLBACK_URL=http://localhost:3000/auth/discord/callback
+# OAuth2 login callback
+CALLBACK_URL=http://localhost/auth/discord/callback
