--- a/.env_example
+++ b/.env_example
@@ -8,6 +8,12 @@ MONGODB_URI=mongodb://admin:password@mongodb:27017/discordbot?authSource=admin
 MONGO_INITDB_ROOT_USERNAME=admin
 MONGO_INITDB_ROOT_PASSWORD=password
 
+# ALLOWED SERWER LIST
+ALLOWED_GUILD_IDS=290267595322556426
+
+# VERIFICATION TYPE
+INVITE_VERIFICATION_MODE=STRICT
+
 # Web server
 WEB_PORT=3000
 SESSION_SECRET=your_random_session_secret
