--- a/.env_example
+++ b/.env_example
@@ -21,3 +21,17 @@ DASHBOARD_URL=http://localhost
 
 # OAuth2 login callback
 CALLBACK_URL=http://localhost/auth/discord/callback
+
+# ID ról dla komend wiatrów
+BOREASZ_ROLE_ID=your_boreasz_role_id
+TRAKIUSZ_ROLE_ID=your_trakiusz_role_id
+IAPIS_ROLE_ID=your_iapis_role_id
+SKIRON_ROLE_ID=your_skiron_role_id
+KAJKIAS_ROLE_ID=your_kajkias_role_id
+EUROS_ROLE_ID=your_euros_role_id
+APELIOTES_ROLE_ID=your_apeliotes_role_id
+EURONOTOS_ROLE_ID=your_euronotos_role_id
+NOTOS_ROLE_ID=your_notos_role_id
+LIBONOTOS_ROLE_ID=your_libonotos_role_id
+LIPS_ROLE_ID=your_lips_role_id
+ZEFIR_ROLE_ID=your_zefir_role_id
