--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "license": "MIT",
   "dependencies": {
     "connect-mongo": "^5.0.0",
+    "cron-parser": "^4.9.0",
     "discord-giveaways": "^6.0.1",
     "discord.js": "^14.11.0",
     "dotenv": "^16.0.3",
